Add unit testing for EventBusProducerSampler class.